# research-to-startup.github.io

./: 404.html  CNAME  Makefile  index.html  mkdocs.yml  pyproject.toml  readme.md  sitemap.xml
docs/: CNAME  index.md  intro-sp22-project.md  intro-sp22.md  launchpad-sp23.md  project.md  seminar-sp24.md  seminar-sp25.md
docs/stylesheets/: .extra.css.swp  extra.css
intro-sp22/: index.html
intro-sp22-project/: index.html
launchpad-sp23/: index.html
project/: index.html
search/: search_index.json
seminar-sp24/: index.html
seminar-sp25/: index.html
stylesheets/: extra.css
